Fixed autowired and number of week in year